--- a/index.html
+++ b/index.html
@@ -3,29 +3,24 @@
 
 <head>
     <title>Audio Visualizer</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    Input your audio:<input type="file" id="input-audio" accept=".mp3, .ogg. .wav">
-    <canvas id="audio_visual"></canvas>
-    <audio id="audio" controls crossorigin=“anonymous”>
+    <div id="heading">
+        <h3>Audio Visualiser</h3>
+    </div>
+    <br>
+    <div id="audioElement">
+        <b>Input your audio:</b> <input type="file" id="input-audio" accept=".mp3, .ogg. .wav">
+        <br>
+        <br>
+        <canvas id="audio_visual"></canvas>
+        <audio id="audio" controls crossorigin=“anonymous”>
         <source src="" id="audio-src" />
     </audio>
-
+    </div>
     <script type="text/javascript" src="main.js"></script>
 </body>
-<style>
-    audio {
-        width: 100%;
-        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
-        border-radius: 90px;
-        transform: scale(1.05);
-    }
-    
-    canvas {
-        width: 100%;
-        height: 500px;
-    }
-</style>
 
 </html>
